[package]
name = "sweeet_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.15"
bytes = "1.4.0"
tokio-util = { version = "0.7", features = ["full"]}
futures-util = "0.3.27"
bincode = "1.3.3"